# MyServerClient

./: .gitignore  README.md  chat_2.0.code-workspace  config.json  main.cpp
MyClient/: login.cpp  login.ui  untitled.pro
MyClient/sources/: config.json
MyServer/: chat_server
MyServer/include/: process_msg.hpp
MyServer/login/: CMakeLists.txt
MyServer/login/include/: login.hpp
MyServer/login/source/: login.cpp
MyServer/message_router/source/: message_router.cpp
MyServer/resource/: cert.cert  chat_db.sqlite  private.pem
QT_object_to_compute_sha3-256/: mainwindow.cpp
include/: local_msg_type.hpp
login/: CMakeLists.txt
login/include/: login.hpp
login/source/: login.cpp
make_aesKey/include/: make_aesKey.hpp
make_aesKey/source/: test.cpp
message_router/: CMakeLists.txt
message_router/include/: message_router.hpp
message_router/source/: message_router.cpp
process_msg/: CMakeLists.txt
process_msg/.cache/clangd/index/: process_msg.cpp.A3E4EE801BD487D2.idx  process_msg.hpp.EAAE23D8C3CBE426.idx
process_msg/source/: process_msg.cpp
